gitops/clusters/totorolab/apps/base/routes/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-traefik-prefix
  namespace: traefik
spec:
  stripPrefix:
    prefixes:
      - /traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.totorolab.local`) || Host(`grafana.albertoops.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homarr.totorolab.local`) || Host(`homarr.albertoops.com`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.totorolab.local`) || Host(`immich.albertoops.com`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
